--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Airstack Explorer</title>
+  <title>Airstack Explorer <%= env.GOOGLE_TAG_MANAGER_ID %>
+  </title>
+
+  <!-- Google Tag Manager -->
+  <% if (env.isProduction) { %>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+          'gtm.start':
+            new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-K4NGTBLB');</script>
+    <% }%>
+      <!-- End Google Tag Manager -->
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <% if (env.isProduction) { %>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K4NGTBLB" height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
+    <% } %>
+      <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
