fix overflow and mobile view issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- End Google Tag Manager -->
 </head>
 
-<body>
+<body class="no-scrollbar">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <!-- Google Tag Manager (noscript) -->
