add meta tags for app

--- a/index.html
+++ b/index.html
@@ -1,36 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="canonical" href="https://explorer.airstack.xyz" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <title>Airstack Explorer <%= env.GOOGLE_TAG_MANAGER_ID %>
-  </title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
 
-  <!-- Google Tag Manager -->
-  <% if (env.isProduction) { %>
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || []; w[l].push({
-          'gtm.start':
-            new Date().getTime(), event: 'gtm.js'
-        }); var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-K4NGTBLB');</script>
+    <title>Airstack Explorer</title>
+    <meta
+      name="description"
+      content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+    />
+
+    <meta property="og:title" content="Airstack Explorer" />
+    <meta
+      property="og:description"
+      content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://explorer.airstack.xyz" />
+    <meta property="og:image" content="/images/open-graph/explorer.png" />
+
+    <meta property="twitter:title" content="Airstack Explorer" />
+    <meta
+      property="twitter:description"
+      content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+    />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:url" content="https://explorer.airstack.xyz" />
+    <meta property="twitter:image" content="/images/open-graph/explorer.png" />
+
+    <!-- Google Tag Manager -->
+    <% if (env.isProduction) { %>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-K4NGTBLB');
+    </script>
     <% }%>
-      <!-- End Google Tag Manager -->
-</head>
+    <!-- End Google Tag Manager -->
+  </head>
 
-<body class="no-scrollbar">
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-  <!-- Google Tag Manager (noscript) -->
-  <% if (env.isProduction) { %>
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K4NGTBLB" height="0" width="0"
-        style="display:none;visibility:hidden"></iframe></noscript>
+  <body class="no-scrollbar">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <!-- Google Tag Manager (noscript) -->
+    <% if (env.isProduction) { %>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-K4NGTBLB"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <% } %>
-      <!-- End Google Tag Manager (noscript) -->
-</body>
-
+    <!-- End Google Tag Manager (noscript) -->
+  </body>
 </html>
