add twitter site meta tag

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       property="twitter:description"
       content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
     />
-    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:site" content="@airstack_xyz" />
     <meta property="twitter:url" content="https://explorer.airstack.xyz" />
     <meta property="twitter:image" content="/images/open-graph/explorer.png" />
 
