--- a/index.html
+++ b/index.html
@@ -14,31 +14,60 @@
     <meta
       name="description"
       content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+      data-react-helmet="true"
     />
 
-    <meta property="og:title" content="Airstack Explorer" />
+    <meta
+      property="og:title"
+      content="Airstack Explorer"
+      data-react-helmet="true"
+    />
     <meta
       property="og:description"
       content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+      data-react-helmet="true"
     />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="<%= env.BASE_URL %>" />
+    <meta property="og:type" content="website" data-react-helmet="true" />
+    <meta
+      property="og:url"
+      content="<%= env.BASE_URL %>"
+      data-react-helmet="true"
+    />
     <meta
       property="og:image"
       content="<%= env.BASE_URL %>/images/open-graph/explorer.png"
+      data-react-helmet="true"
     />
 
-    <meta property="twitter:title" content="Airstack Explorer" />
+    <meta
+      property="twitter:title"
+      content="Airstack Explorer"
+      data-react-helmet="true"
+    />
     <meta
       property="twitter:description"
       content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens."
+      data-react-helmet="true"
     />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:site" content="@airstack_xyz" />
-    <meta property="twitter:url" content="<%= env.BASE_URL %>" />
+    <meta
+      property="twitter:card"
+      content="summary_large_image"
+      data-react-helmet="true"
+    />
+    <meta
+      property="twitter:site"
+      content="@airstack_xyz"
+      data-react-helmet="true"
+    />
+    <meta
+      property="twitter:url"
+      content="<%= env.BASE_URL %>"
+      data-react-helmet="true"
+    />
     <meta
       property="twitter:image"
       content="<%= env.BASE_URL %>/images/open-graph/explorer.png"
+      data-react-helmet="true"
     />
 
     <!-- Google Tag Manager -->
