chore: move tags in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     />
 
     <title>Airstack Explorer</title>
+    <meta name="description" content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens." />
+
+    <meta property="og:url" content="<%= env.BASE_URL %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Airstack Explorer" />
+    <meta property="og:description" content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens." />
+    <meta property="og:image" content="<%= env.BASE_URL %>/images/open-graph/explorer.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@airstack_xyz" />
+    <meta name="twitter:url" content="<%= env.BASE_URL %>" />
+    <meta name="twitter:title" content="Airstack Explorer" />
+    <meta name="twitter:description" content="Visual Blockchain Explorer. Open source. Forkable. Fetch identities including; ENS, Lens, Farcaster, XMTP, POAPs, NFTs, Tokens." />
+    <meta name="twitter:image" content="<%= env.BASE_URL %>/images/open-graph/explorer.png" />
     
     <% if (env.isProduction) { %>
     <!-- Google Tag Manager -->
