--- a/index.html
+++ b/index.html
@@ -11,22 +11,37 @@
     />
 
     <title>Airstack Explorer</title>
-    <meta name="description" content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs." />
+    <meta
+      name="description"
+      content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs."
+    />
 
     <meta property="og:url" content="<%= env.BASE_URL %>" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Airstack Explorer" />
-    <meta property="og:description" content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs." />
-    <meta property="og:image" content="<%= env.BASE_URL %>/images/open-graph/explorer.png" />
+    <meta
+      property="og:description"
+      content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs."
+    />
+    <meta
+      property="og:image"
+      content="<%= env.BASE_URL %>/images/open-graph/explorer.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@airstack_xyz" />
     <meta name="twitter:url" content="<%= env.BASE_URL %>" />
     <meta name="twitter:title" content="Airstack Explorer" />
-    <meta name="twitter:description" content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs." />
-    <meta name="twitter:image" content="<%= env.BASE_URL %>/images/open-graph/explorer.png" />
-    
-    <% if (env.isProduction) { %>
+    <meta
+      name="twitter:description"
+      content="Multi-chain visual blockchain explorer. Search using ENS, Farcaster, Lens, NFTs, tokens. Fetch historical balances. Download CSV or get APIs."
+    />
+    <meta
+      name="twitter:image"
+      content="<%= env.BASE_URL %>/images/open-graph/explorer.png"
+    />
+
+    <% if (env.GOOGLE_TAG_MANAGER_ID) { %>
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -47,13 +62,34 @@
       );
     </script>
     <!-- End Google Tag Manager -->
+    <% }%> 
+    <% if (env.TWITTER_PIXEL_ID) { %>
+    <!-- Twitter Pixel -->
+    <script>
+      (function (e, t, n, s, u, a) {
+        e.twq ||
+          ((s = e.twq =
+            function () {
+              s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+            }),
+          (s.version = '1.1'),
+          (s.queue = []),
+          (u = t.createElement(n)),
+          (u.async = !0),
+          (u.src = 'https://static.ads-twitter.com/uwt.js'),
+          (a = t.getElementsByTagName(n)[0]),
+          a.parentNode.insertBefore(u, a));
+      })(window, document, 'script');
+      twq('config', '<%= env.TWITTER_PIXEL_ID %>');
+    </script>
+    <!-- End Twitter Pixel -->
     <% }%>
   </head>
 
   <body class="no-scrollbar">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <% if (env.isProduction) { %>
+    <% if (env.GOOGLE_TAG_MANAGER_ID) { %>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
       <iframe
